custom flower gen

--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -36,7 +36,9 @@
 
   "block.mccourse.balsa_sapling": "Balsa Sapling",
 
-  
+  "block.mccourse.catmint": "Catmint",
+  "block.mccourse.potted_catmint": "Potted Catmint",
+
 
   "tooltip.mccourse.chainsaw.tooltip.shift": "Press §eShift§r for more Information!",
   "tooltip.mccourse.chainsaw.tooltip.1": "This Chainsaw will cut down trees fast!",
